UI: fix notification z-index.

--- a/src/less/ripple/status.less
+++ b/src/less/ripple/status.less
@@ -151,7 +151,7 @@
     right: 0;
     width: 100%;
     padding: 15px 5px 5px;
-    z-index: 5;
+    z-index: 50;
     text-align: center;
     line-height: 20px;
     .transition-duration(0.2s);
